[package]
name = "zlin"
version = "0.1.0"
authors = ["Vadim Rutkovsky <vrutkovs@redhat.com>"]

[dependencies]
rocket = "0.3.2"
rocket_codegen = "0.3.2"
rand = "0.3.16"
tera = "0.10"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]
